  * `{title}` for the current page title.
- The `{title}` field in `tabs.title.format`, `tabs.title.format_pinned` and
  `window.title_format` got renamed to `{current_title}` (mirroring
  `{current_url}`) in order to not conflict with the new `{title}` commandline
  replacement.
- New `delete` target for `:hint` which removes the hinted element from
  the DOM.

Changed
~~~~~~~

- The desktop file `qutebrowser.desktop` is now renamed to
  `org.qutebrowser.qutebrowser.desktop`.
- Pinned tabs now always show a favicon (even if the site doesn't provide one)
  when shrinking.
- Slight performance improvements for the `:open` completion.
- Performance improvements for showing hints.
- Setting `downloads.location.directory` now changes the directory displayed in
  the download prompt even if `downloads.location.remember` is set.
- The `yank` command gained a new `inline` argument, which allows to e.g. use
  `:yank inline [{title}]({url})`.
- Duplicate consecutive history entries with the same URL are now ignored.
- More detailed error messages when spawning a process failed.
- The `content.pdfjs` setting now supports domain patterns.
- Improved process status output with `:spawn -o`.
- Various performance improvements.

Deprecated
~~~~~~~~~~

- `:yank markdown` got deprecated, as `:yank inline [{title}]({url})` can now
  be used instead.

Fixed
~~~~~

- Race condition causing a colored statusbar in normal mode when
  entering/exiting caret mode quickly.
- Using `100%` for a hue in a `hsv(...)` config value now corresponds to 359
  (rather than 255), matching the fixed behavior in Qt 5.13.
- Chaining commands with ;; used to abort with some failing commands. It now
  runs the second command no matter whether the first one succeeded or not.

v1.6.3 (unreleased)
-------------------

Fixed
~~~~~

- Crash when hinting and changing/closing the tab before hints are displayed.

v1.6.2
------

Changed
~~~~~~~
