@@ -39,6 +39,7 @@ Added
   replacement.
 - New `delete` target for `:hint` which removes the hinted element from
   the DOM.
+- Support for notifications (shown via system tray) with Qt 5.13.
 
 Changed
 ~~~~~~~
